Добавил медиа запросы и пофиксил баги

--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -3,6 +3,7 @@
   width: 90px;
   color: white;
   font-family: 'MyFont';
+  text-align: center;
   font-size: 5rem;
   line-height: 1;
   border: 1px solid gray;
@@ -37,6 +38,7 @@
 }
 
 .item {
+  text-align: center;
   cursor: pointer;
 }
 
