--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -3,6 +3,7 @@
   width: 90px;
   color: white;
   font-family: 'MyFont';
+  text-align: center;
   font-size: 5rem;
   line-height: 1;
   border: 1px solid gray;
@@ -40,6 +41,7 @@
 }
 
 .item {
+  text-align: center;
   cursor: pointer;
 }
 
