--- a/src/components/Timer/timer.module.css
+++ b/src/components/Timer/timer.module.css
@@ -42,18 +42,51 @@
 }
 
 .time {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin: 0 auto;
   position: absolute;
   width: 600px;
   top: 50%;
-  left: 50%;
+  left: 35%;
   font-size: 10em;
   line-height: 1;
   white-space: normal;
   -webkit-transform: translate(-45%, -50%);
           transform: translate(-45%, -50%);
   font-family: 'MyFont';
-  font-size: 10rem;
+  font-size: 9rem;
   color: white;
 }
-/*# sourceMappingURL=timer.module.css.map */
+
+.time_over {
+  left: 16%;
+}
+
+.time_box {
+  width: 150px;
+}
+
+.time_box_center {
+  width: 150px;
+  text-align: center;
+}
+
+@media (max-width: 799px) {
+  .wrapper__btns {
+    margin-top: 175px;
+  }
+  .wrapper__btns_active {
+    margin-top: 175px;
+  }
+  .time {
+    width: 308px;
+    font-size: 5rem;
+    left: 42%;
+  }
+}
+/*# sourceMappingURL=Timer.module.css.map */
