--- a/src/components/Timer/timer.module.scss
+++ b/src/components/Timer/timer.module.scss
@@ -23,16 +23,42 @@
 }
 
 .time {
+  display: flex;
+  justify-content: center;
   margin: 0 auto;
   position: absolute;
   width: 600px;
   top: 50%;
-  left: 50%;
+  left: 35%;
   font-size: 10em;
   line-height: 1;
   white-space: normal;
   transform: translate(-45%, -50%);
   font-family: 'MyFont';
-  font-size: 10rem;
+  font-size: 9rem;
   color: rgb(255, 255, 255);
+  &_over {
+    left: 16%;
+  }
+  &_box {
+    width: 150px;
+    &_center {
+      width: 150px;
+      text-align: center;
+    }
+  }
+}
+
+@media (max-width: 799px) {
+  .wrapper__btns {
+    margin-top: 175px;
+    &_active {
+      margin-top: 175px;
+    }
+  }
+  .time {
+    width: 308px;
+    font-size: 5rem;
+    left: 42%;
+  }
 }
